# NewAlpha

./: .gitignore  CMakeLists.txt  Makefile  README.md  conf.txt  main.cpp
main/: main.cpp
server/: Server.cpp  Server.h  server_conf.cpp  server_conf.h
